--- a/npcs/Race Abilities.yaml
+++ b/npcs/Race Abilities.yaml
@@ -351,3 +351,30 @@
         - Amphibious: You can breathe air and water
         - Trickster Talents:  You have proficiency in the Sleight of Hand and Stealth skills
         - Cantrips: You know one cantrip of your choice from the bard spell list spell list. Charisma is your spellcasting ability for it.
+        
+        
+   - - Beholder Abilities:
+       - Darkvision: You can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You can't discern color in darkness, only shades of gray
+       - Bite: Melee Weapon Attack: +2 to hit, reach 5 ft., one target. Hit: 8 (2d6) piercing damage.
+       - Antimagic Cone: The beholder's central eye creates an area of antimagic, as in the antimagic field spell, in a 150-foot cone. At the start of each of its turns, the beholder decides which way the cone faces and whether
+                         the cone is active. The area works against the beholder's own eye rays.
+       - Eye Rays: The beholder shoots three of the following magical eye rays at random (reroll duplicates), choosing one to three targets it can see within 120 ft. of it;
+         - Charm Ray: The targeted creature must succeed on a DC 16 Wisdom saving throw or be charmed by the beholder for 1 hour, or until the beholder harms the creature.
+         - Paralyzing Ray: The targeted creature must succeed on a DC 16 Constitution saving throw or be paralyzed for 1 minute. The target can repeat the saving throw at the end of each of its turns, ending the effect on itself
+                           on a success.
+         - Fear Ray: The targeted creature must succeed on a DC 16 Wisdom saving throw or be frightened for 1 minute. The target can repeat the saving throw at the end of each of its turns, ending the effect on itself on a
+                     success.
+         - Slowing Ray: The targeted creature must succeed on a DC 16 Dexterity saving throw. On a failed save, the target's speed is halved for 1 minute. In addition, the creature can't take reactions, and it can take either an
+                        action or a bonus action on its turn, not both. The creature can repeat the saving throw at the end of each of its turns, ending the effect on itself on a success.
+         - Enervation Ray: The targeted creature must make a DC 16 Constitution saving throw, taking 36 (8d8) necrotic damage on a failed save, or half as much damage on a successful one.
+         - Telekinetic Ray: If the target is a creature, it must succeed on a DC 16 Strength saving throw or the beholder moves it up to 30 ft. in any direction. It is restrained by the ray's telekinetic grip until the start of
+                            the beholder's next turn or until the beholder is incapacitated. If the target is an object weighing 300 pounds or less that isn't being worn or carried, it is moved up to 30 ft. in any direction. The
+                            beholder can also exert fine control on objects with this ray, such as manipulating a simple tool or opening a door or a container.
+         - Sleep Ray: The targeted creature must succeed on a DC 16 Wisdom saving throw or fall asleep and remain unconscious for 1 minute. The target awakens if it takes damage or another creature takes an action to wake it.
+                      This ray has no effect on constructs and undead.
+         - Petrification Ray: The targeted creature must make a DC 16 Dexterity saving throw. On a failed save, the creature begins to turn to stone and is restrained. It must repeat the saving throw at the end of its next turn.
+                              On a success, the effect ends. On a failure, the creature is petrified until freed by the greater restoration spell or other magic.
+         - Disintegration Ray: If the target is a creature, it must succeed on a DC 16 Dexterity saving throw or take 45 (10d8) force damage. If this damage reduces the creature to 0 hit points, its body becomes a pile of fine
+                               gray dust. If the target is a Large or smaller nonmagical object or creation of magical force, it is disintegrated without a saving throw. If the target is a Huge or larger object or creation of
+                               magical force, this ray disintegrates a 10-foot cube of it.
+         - Death Ray: The targeted creature must succeed on a DC 16 Dexterity saving throw or take 55 (10d10) necrotic damage. The target dies if the ray reduces it to 0 hit points.
