--- a/npcs/Race Abilities.yaml
+++ b/npcs/Race Abilities.yaml
@@ -66,13 +66,14 @@
                        his equine legs. When he make such a climb, each foot of movement costs him 4 extra feet, instead of the normal 1 extra foot
        - Survivor: Proficiency in Survival					   
 	  
-   - - Werewolf Abilities:
+   - - WereWolf Abilities:
        - Keen Hearing and Smell: Advantage on perception rolls that involve Hearing and Sight
        - Tough Hide: +2 to AC in Wolf and Half-Wolf forms. 
-       - Lycan Immunity: Immune to non-magic or non-silver Bludgeoning, Piercing and Slashing damage in all his forms. Resistance to poison 
+       - Lycan Immunity: Immune to non-magic or non-silver Bludgeoning, Piercing and Slashing damage in all its forms. Resistance to poison 
        - Heightened Prowess: +1 to Strength and Dexterity saving throws in Wolf or Half-Wolf
-       - Shapeshift: Basil has mastered his curse and can shapeshift between forms at will except on the full moon, upon which he changes whether he wants to or not
-       - The Curse: Humanoid Creatures he bites must make a constitution saving throw against DC 15 or become cursed with Lycanthrope	  
+       - Shapeshift: can use its action to polymorph into a wolf-humanoid hybrid or into a wolf, or back into its true form, which is humanoid. Any equipment it is wearing or carrying isn't transformed. It reverts to its true
+                     form if it dies
+       - The Curse: Humanoid Creatures you bite must make a constitution saving throw against DC 15 or become cursed with Lycanthrope	  
 	  
    - - Orc Abilities:
        - Darkvision: can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You can't discern color in darkness, only shades of gray           
@@ -373,3 +374,15 @@
                                gray dust. If the target is a Large or smaller nonmagical object or creation of magical force, it is disintegrated without a saving throw. If the target is a Huge or larger object or creation of
                                magical force, this ray disintegrates a 10-foot cube of it.
          - Death Ray: The targeted creature must succeed on a DC 16 Dexterity saving throw or take 55 (10d10) necrotic damage. The target dies if the ray reduces it to 0 hit points.
+         
+         
+   - - Weretiger Abilities:
+       - Keen Hearing and Smell: Advantage on perception rolls that involve Hearing and Sight
+       - Tough Hide: +2 to AC in Tiger and Half-Tiger forms. 
+       - Lycan Immunity: Immune to non-magic or non-silver Bludgeoning, Piercing and Slashing damage in all his forms. Resistance to poison 
+       - Heightened Prowess: +1 to Strength and Dexterity saving throws in Tiger or Half-Tiger
+       - Shapeshift: The weretiger can use its action to polymorph into a tiger-humanoid hybrid or into a tiger, or back into its true form, which is humanoid. Any equipment it is wearing or carrying isn't transformed. It
+                     reverts to its true form if it dies
+       - The Curse: Humanoid Creatures he bites must make a constitution saving throw against DC 15 or become cursed with Lycanthrope
+       - Pounce: (Tiger or Hybrid Form Only). If the weretiger moves at least 15 feet straight toward a creature and then hits it with a claw attack on the same turn, that target must succeed on a DC 14 Strength saving throw or
+                 be knocked prone. If the target is prone, the weretiger can make one bite attack against it as a bonus action
