--- a/npcs/Class Abilities.yaml
+++ b/npcs/Class Abilities.yaml
@@ -60,6 +60,7 @@
          - Second Wind: Bonus Action to regain 1d10 + 
          - Action Surge: Once every short/long rest can take an extra action
          - Extra Attack: Can attack twice each turn	 - Indomiable: you can reroll a saving throw that you fail. If you do so, you must use the new roll
+         - Indomitable: you can reroll a saving throw that you fail. If you do so, you must use the new roll, and you can use this feature 3 times per Long Rest.
 		 
 
    - - Barbarian Abilities:
@@ -211,7 +212,8 @@
          3rd Level: 
          4th Level: 
          5th Level: 
-       - Infuse Item: Imbue mundane items with magical infusions, turnig them into magic items. Can attune to that item immediately,  
+       - Infuse Item: Imbue  mundane items with magical infusions, turnig them into magic items. Can attune to that item immediately,
+       - Infusions Known:       
        - The Right Tool for the Job: Can produce any set of artisan's tools with 1 hour work
        - Tool Expertise: Smith's Tool proficiency bonus is doubled
        - Flash of Genius: Can use a reaction to add intelligence modifier to his or another creature within 30' to ability checks or saving throws
