--- a/npcs/Class Abilities.yaml
+++ b/npcs/Class Abilities.yaml
@@ -59,7 +59,7 @@
          - Fighting Style:
          - Second Wind: Bonus Action to regain 1d10 + 
          - Action Surge: Once every short/long rest can take an extra action
-         - Extra Attack: Can attack twice each turn	 - Indomiable: you can reroll a saving throw that you fail. If you do so, you must use the new roll
+         - Extra Attack: Can attack twice each turn
          - Indomitable: you can reroll a saving throw that you fail. If you do so, you must use the new roll, and you can use this feature 3 times per Long Rest.
 		 
 
@@ -212,7 +212,7 @@
          3rd Level: 
          4th Level: 
          5th Level: 
-       - Infuse Item: Imbue  mundane items with magical infusions, turnig them into magic items. Can attune to that item immediately,
+       - Infuse Item: Imbue mundane items with magical infusions, turnig them into magic items. Can attune to that item immediately,
        - Infusions Known:       
        - The Right Tool for the Job: Can produce any set of artisan's tools with 1 hour work
        - Tool Expertise: Smith's Tool proficiency bonus is doubled
