--- a/npcs/Race Abilities.yaml
+++ b/npcs/Race Abilities.yaml
@@ -386,3 +386,25 @@
        - The Curse: Humanoid Creatures he bites must make a constitution saving throw against DC 15 or become cursed with Lycanthrope
        - Pounce: (Tiger or Hybrid Form Only). If the weretiger moves at least 15 feet straight toward a creature and then hits it with a claw attack on the same turn, that target must succeed on a DC 14 Strength saving throw or
                  be knocked prone. If the target is prone, the weretiger can make one bite attack against it as a bonus action
+                 
+                 
+   - - Steel Defender Abilities:
+        - Armor Class: 15
+        - Hit Points: 2+ your Intelligence modifier + 5 times your artificer level (the defender has a number of Hit Dice [d8s] equal to your artificer level)
+        - Speed: 40
+        - str: 14
+        - dex: 12
+        - con: 14
+        - int: 4
+        - wis: 10
+        - cha: 6
+        - Proficiencies: Proficiency Bonus + - Atheltics +2 plus PB, Perception +0 plus PBx2, Dex Saves +3 plus PB, Con Saves +2 plus PB
+        - Immunities: Immune to Poison and Psychic Damage. Immune to Poison, Charmed and Exhaustion. Resistant to Fire
+        - Darkvision: 60ft. Passive Perception 22
+        - Vigilant: Can't be surprised
+        - Force Empowered Rend: Using a + Spellcasting modifier to hit one target within 5ft. Deals 1d8+PB force damage.
+        - Repair: (3/Day) Restore 2d8+6 hit points to itself or another object or construct within 5ft
+        - Extra Attack: Can take a second attack action each turn
+        - Deflect Attack: Imposes disadvantage on the attack roll of one creature it can see that is within 5 feet of it provided that attack roll is against a creature other than it,
+                          The attacker takes 1d4+8 force damage. 
+        - Intimidate: It is an imposing sight and all those seeing it for the first time must make a DC 12 Wisdom save or become firghtened for 1 round
