--- a/npcs/lasan_halfnight.yaml
+++ b/npcs/lasan_halfnight.yaml
@@ -83,7 +83,7 @@ metadata:
   # For now, I suggest: convert the character name to lower case,
   # and replace all spaces and punctuation with underscores (_)
   #
-  id: kraven_holtdmoore
+  id: lasan_halfnight
 
   #
   # The name of the submitter (your name).
@@ -134,7 +134,7 @@ npc:
   # Required.
   # Max length: ...
   #
-  name: Kraven Holtdmoore
+  name: Lasan Halfnight
 
   #
   # The NPC artwork.
@@ -196,7 +196,7 @@ npc:
     # Optional.  Can be commented out.
     # Max length: ...
     #
-    sub-race: WereTiger
+    sub-race: N/A
 
     #
     # Pronouns (case insensitive):
@@ -215,7 +215,7 @@ npc:
     # Max length per occupation: ...
     #
     occupation:
-    - Sailor; Tattoo Artist; Marksman; Musician
+    - Merchant
     
 
     #
@@ -239,7 +239,7 @@ npc:
     #
     # Required.
     #
-    class: Rogue/Bard
+    class: Artificer
 
     #
     # D & D subclasses (case insensitive):
@@ -262,7 +262,7 @@ npc:
     #
     # Required.
     #
-    subclass: Swashbuckler/College of Ink
+    subclass: Battle Smith
 
     #
     # Class level.
@@ -271,7 +271,7 @@ npc:
     # Required.
     # Integer.
     #
-    level: 6/6
+    level: 5
 
     #
     # Alignments (case insensitive):
@@ -311,8 +311,10 @@ npc:
     #
     languages:
     - Common
-    - Thieves' Cant
+    - Dwarven
     - Elvish
+    - Goblin
+    - Undercommon
 
 
     #
@@ -332,8 +334,7 @@ npc:
     #
     # Optional.  0 or more.
     #
-    - id: thieves_guild
-      name: Thieve's Guild
+    - N/A
 
     #
     # Adjectives or other tags that can be used for searching.
@@ -341,8 +342,8 @@ npc:
     # Optional.  0 or more.
     #
     adjectives:
-    - Cunning
-    - Artistic
+    - Shady
+    - Detatched
     - Sly
 
   improv:
@@ -358,7 +359,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    introduction:  Will be found in archery competitions. He is also well-known for his tattoo art and can provide those passing through a city with mystical or magical tattoos. He rarely sets up within a busy market and prefers a corner in a tavern or inn where he can also perform and is often offered good sums of coins to remain a staple at well-known pubs and alehouses.
+    introduction:  He blows into town hawking his wares out of a wagon. Always love to "set up shop" near the busiest intersection he can.
 
     #
     # Appearance: a brief description of the character skin, clothes, hair, eyes, etc.
@@ -369,7 +370,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    appearance:   Boy-next-door', boy-band look; Finely dressed; Messy-styled hair; piercing green eyes;
+    appearance:   Dressed well for a commoner, but it's nothing a noble would be caught dead in.
 
     #
     # Expressions: things the character says all the time, making their speech distinctive.
@@ -385,7 +386,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions:  "You know, not only do I sing like an Efreeti, I can also hit a Meeroskos from a hundred yards"; "I'll liven up this mundanity..."; "How long can you stare at the moon?"
+    expressions:  Loves to be agreeable, always concludes with "Indeed", Not too much, and never too long
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
@@ -398,7 +399,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    mannerisms:   Can never sit still - always a knee bouncing or fingers rapping; offers art or tattoos to anyone in a casual vicinity (tavern, market, etc.); Talks incessantly about his times on the 'High Seas';
+    mannerisms:   He's always quick to change the subject away from anything complicated. He knows stuff, not events or politics.
 
   acting:
     #
@@ -408,7 +409,7 @@ npc:
     # ???Maximum length???
     #
     motivations: |
-      Friendship and emotional or sexual intimacy are Kraven's greatest desires. Not keen on morality or self-actualization, per se, he often tries to impress others at the cost of fulfilling his own desires.
+      To unload merchandise, make coin, and get out of town before anyone knows that the stuff he's selling is no good.
       
     #
     # Passions:
@@ -417,7 +418,7 @@ npc:
     # ???Maximum length???
     #
     passions: |
-      Sailing; Visual art; Tattoos; Great Cats
+      Lasan loves his horse and takes great care of him. He also enjoys travelling and watching the constellations.
       
     #
     # Vulnerabilities:
@@ -426,7 +427,7 @@ npc:
     # ???Maximum length???
     #
     vulnerabilities: |
-      Magical and silvered weapons
+      His items are junk, they'll work for a short time, but after that they're just cheap replicas of the real thing.
       
     #
     # Secrets:
@@ -435,7 +436,7 @@ npc:
     # ???Maximum length???
     #
     secrets: | 
-      Kraven is a weretiger.
+      His merchandise is faulty.  He's using his artificer powers to put on a show, but as soon as he's gone, none of it works
        
       
   #
@@ -443,15 +444,15 @@ npc:
   # All integers.
   #
   stats:
-    armour-class: 13/15
-    hit-points: 55/122
-    speed: 30/40 in Tiger Form
-    str: 12/17
-    dex: 17/15
-    con: 14/16
-    int: 10/10
-    wis: 15/13
-    cha: 17/11
+    armour-class: 16
+    hit-points: 45
+    speed: 30
+    str: 8
+    dex: 13
+    con: 10
+    int: 17
+    wis: 14
+    cha: 17
 
   #
   # Special characteristics.
@@ -462,65 +463,63 @@ npc:
   #
   specialties:
     skills:
-   - - Weretiger Abilities:
-       - Keen Hearing and Smell: Advantage on perception rolls that involve Hearing and Sight
-       - Tough Hide: +2 to AC in Tiger and Half-Tiger forms. 
-       - Lycan Immunity: Immune to non-magic or non-silver Bludgeoning, Piercing and Slashing damage in all his forms. Resistance to poison 
-       - Heightened Prowess: +1 to Strength and Dexterity saving throws in Tiger or Half-Tiger
-       - Shapeshift: The weretiger can use its action to polymorph into a tiger-humanoid hybrid or into a tiger, or back into its true form, which is humanoid. Its statistics, other than its size, are the same in each form. Any
-                     equipment it is wearing or carrying isn't transformed. It reverts to its true form if it dies
-       - The Curse: Humanoid Creatures he bites must make a constitution saving throw against DC 15 or become cursed with Lycanthrope
-       - Pounce: (Tiger or Hybrid Form Only). If the weretiger moves at least 15 feet straight toward a creature and then hits it with a claw attack on the same turn, that target must succeed on a DC 14 Strength saving throw or
-                 be knocked prone. If the target is prone, the weretiger can make one bite attack against it as a bonus action
+   - - Artificer Abilities:
+       - Magical Tinkering: Can invest a spark of magic into mundane objects with a touch - Bright Light, Record Message, Record Sound or Odor, Create Picture or Text
+       - Spellcasting: Requires Tinker's Tools as Spellcasting focus, Spell DC 13 
+         Cantrip: Mage Hand, Mending
+         1st Level: Alarm, Disguise Self, Detect Magic, Identify
+         2nd Level: Invisibility, Heat Metal 
+       - Infuse Item: Imbue mundane items with magical infusions, turnig them into magic items. Can attune to that item immediately,
+       - Infusions Known: 4       
+       - The Right Tool for the Job: Can produce any set of artisan's tools with 1 hour work
                  
-   - - Rogue Abilities:
-       - Expertise: Double proficiency bonus with Thieve's Tools and Sleight of Hand
-       - Sneak Attack: Once per turn can add 3d6 to one creature she hits with a ranged or finesse attack if she has advantage on the attack or if the target is engaged with another creater
-       - Cunning Action: Can tak a bonus action on each turn to Hide, Disengage or Dash
-       - Uncanny Dodge: When an attacker she can see hits her with an attack, she can use her Reaction to halve the damage
-       
-   - - Swashbuckler Abilities:
-       - Fancy Footwork: you learn how to land a strike and then slip away without reprisal. During your turn, if you make a melee attack against a creature, that creature can't make opportunity attacks against you for the rest
-                         of your turn
-       - Rakish Audacity: You can give yourself a bonus to your initiative rolls equal to your Charisma modifier. You also gain an additional way to use your Sneak Attack; you don't need advantage on the attack roll to use your
-                          Sneak Attack against a creature if you are within 5 feet of it, no other creatures are within 5 feet of you, and you don't have disadvantage on the attack roll. All the other rules for Sneak Attack still
-                          apply to you.
-       
-       - Bard Spellcasting: Spell DC 14
-           Cantrip: Mage Hand, Vicious Mockery, Minor Illusion
-           1st Level: Bane, Charm Person, Puppet, Hideous Laughter
-           2nd Level: Crown of Madness, Heat Metal, Detect Thoughts
-           3rd Level: Nondetection, Dispel Magic, Fear        
-       - Bardic Inspiration: Can use a Bonus Action on their Turn to choose one creature other than themself within 60 feet of, who can hear them. That creature gains one Bardic Inspiration die, a d8. Once within the next 
-                             10 minutes, the creature can roll the die and add the number rolled to one ability check, Attack roll, or saving throw it makes.
-       - Jack of All Trades: can add half their Proficiency Bonus, rounded down, to any ability check they make that doesn't already include their Proficiency Bonus
-       - Song of Rest: If they or any friendly creatures who can hear their Performance regain Hit Points by spending Hit Dice at the end of the Short Rest, each of those creatures regains an extra 1d6 Hit Points.
-       - Font of Inspiration: they regain all of their expended uses of Bardic Inspiration when they finish a short or Long Rest
-       - Countercharm: As an action, they can start a Performance that lasts until the end of their next turn. During that time, them and any friendly creatures within 30 feet of them have advantage on Saving Throws against 
-                       being Frightened or Charmed
-                       
-   - - College of Ink Abilities:
-       - Connoisseur of Symbols: you have advantage on any ability check that you make using Arcana, History, Nature, Religion or your Tattooist’s Supplies or Calligrapher’s Supplies proficiencies to determine the nature of a
-                                 tattoo, sigil, or symbol. This includes symbols using a language you do not understand, so long as the symbol is mostly comprised of other shapes and images. This allows you to identify magic
-                                 tattoos with a successful check as well as understand basic warnings and information communicated through markings
-       - Lasting Inspiration: you can imbue your Bardic Inspiration into a tattoo. When you are tattooing someone, you may expend all remaining uses of your Bardic Inspiration to imbue one Bardic Inspiration die into the tattoo.
-                              The tattoo receives your current Bardic Inspiration die and does not increase when you increase in level. Once the tattoo is complete, the bearer may use a bonus action to activate the tattoo, adding
-                              your Bardic Inspiration die to their next attack roll, saving throw, or ability check. Once the recipient has used the tattoo in this fashion, it cannot be used again until they complete a long rest.
-                              You may add Lasting Inspiration to any tattoo you craft, be it magical or not. Adding Lasting Inspiration to a magical tattoo does not impact or impede its other effects in any way. Once your Bardic
-                              Inspiration die has increased, you may spend one hour performing a touch up on a tattoo you have previously invested with Lasting Inspiration. At the end of the hour, you expend one use of your
-                              Bardic Inspiration. Once this is complete, the Lasting Inspiration die increases to your current Bardic Inspiration die. You cannot perform touch ups in this way on another artist’s tattoos. In
-                              addition, you are now considered to have achieved the necessary tattoo artist notoriety required to study under an established tattoo adept, even if you have never maintained a shop
+   - - Battle Smith Abilities:
+       - Spellcasting: Requires Tinker's Tools as Spellcasting focus, Spell DC 13 
+         3rd Level: Heroism, Shield
+         5th Level: Branding Smite, Warding Bond
+       - Battle Ready: your combat training and your experiments with magic have paid off in two ways;
+                       - You gain proficiency with martial weapons.
+                       - When you attack with a magic weapon, you can use your Intelligence modifier, instead of Strength or Dexterity modifier, for the attack and damage rolls
+       - Steel Defender: your tinkering has borne you a faithful companion, a steel defender. It's friendly to you and your companions, and it obeys your commands. See its game statistics in the Steel Defender stat block, which
+                         uses your proficiency bonus (PB) in several places. You determine the creature's appearance and whether it has two legs or four; your choice has no effect on its game statistics. In combat, the defender
+                         shares your initiative count, but it takes its turn immediately after yours. It can move and use its reaction on its own, but the only action it takes on its turn is the Dodge action, unless you take a
+                         bonus action on your turn to command it to take another action. That action can be one in its stat block or some other action. If you are incapacitated, the defender can take any action of its choice,
+                         not just Dodge. If the Mending spell is cast on it, it regains 2d6 hit points. If it has died within the last hour, you can use your smith's tools as an action to revive it, provided you are within 5
+                         feet of it and you expend a spell slot of 1st level or higher. The steel defender returns to life after 1 minute with all its hit points restored. At the end of a long rest, you can create a new steel
+                         defender if you have smith's tools with you. If you already have a defender from this feature, the first one immediately perishes. The defender also perishes if you die       
+       - Extra Attack: Can attack twice each turn
                
     special-abilities:
-       - Proficiencies: Performance; Persuasion; Perception; Survival
-       - Feats: Lucky 
+       - Proficiencies: Performance; Persuasion; Tinker's Tools
+       - Feats: Actor 
        
     attacks: |
-      2 attacks with scimitar, longbow or spell
+      2 attacks with dagger or spell
     combat-tactics: |
-      Kraven is a crafty combatant. He will rarely take his weretiger form. When in human form he will keep distance at first, using his longbow and magic. Otherwise, he engages with his scimitars. When pressed he will retreat to a secluded area and transform to slay his opponents.
+      will only take opportunity attacks, otherwise he lets his Steel Defender fight for him
     special-equipment:
-    - Horn of Blasting
+    - Steel Defender:
+        - Armor Class: 15
+        - Hit Points: 31
+        - Speed: 40
+        - str: 14
+        - dex: 12
+        - con: 14
+        - int: 4
+        - wis: 10
+        - cha: 6
+        - Proficiencies: Proficiency Bonus +3 - Atheltics +2 plus PB, Perception +0 plus PBx2, Dex Saves +3 plus PB, Con Saves +2 plus PB
+        - Immunities: Immune to Poison and Psychic Damage. Immune to Poison, Charmed and Exhaustion. Resistant to Fire
+        - Darkvision: 60ft. Passive Perception 22
+        - Vigilant: Can't be surprised
+        - Force Empowered Rend: Using a +6 Spellcasting modifier to hit one target within 5ft. Deals 1d8+6 force damage.
+        - Repair: (3/Day) Restore 2d8+6 hit points to itself or another object or construct within 5ft
+        - Extra Attack: Can take a second attack action each turn
+        - Deflect Attack: Imposes disadvantage on the attack roll of one creature it can see that is within 5 feet of it provided that attack roll is against a creature other than it,
+                          The attacker takes 1d4+8 force damage. 
+        - Intimidate: It is an imposing sight and all those seeing it for the first time must make a DC 12 Wisdom save or become firghtened for 1 round
+    - Dagger
+    - Various gadgets and other inventory for sale
       
   profile:
 
@@ -532,11 +531,8 @@ npc:
     # No length limit for now.
     #
     background-story: |
-      Kraven is not infected. He is what one would call a 'true' weretiger born of the breed in the jungles of Khuile [Any isolated vilage of Weretigers]. Set upon a collection of river mouths draining into the sea, he and his
-      brood were also skilled sea-men. His clan claim to be descendents of the original weretigers and remain staunchly noble in their dealings with others with the hopes of changing public opinion towards lycanthropes.
-      Kraven set forth on such an information campaign but was met with rebukes and violence. His lycanthropic form was incredibly dangerous in defence of many violent altercations, many of which unfortunately resulted in
-      murders. Kraven thus turned his hand to what was in his heart: sailing, artwork, shadows, magic, mystery, and music. Combining these passions, Kraven is one of the first and only tattoo artists in the region who can
-      offer magic tattoos - at a costly price.
+      Lasan is the son of a merchant who did the same thing he does today. Make items that work for a short period of time, sell them for more than their worth, and get out of Dodge before any one is the wiser.  His dad died not
+      too long ago, and he's still trying to cope with it. He took up adventuring for a time, but it complicated him with too many attachments, he just wasn't ready for.
       
     #
     # Personality (or something like that):
@@ -547,8 +543,8 @@ npc:
     # No length limit for now.
     #
     personality: |
-      Kraven is a sly and cunning individual, but hides it under a facade of jovial pleasantness. He loves a good chat, or a rousing song, but he's definitely not afraid to fight if hes pressed to it. He's smooth and charasmatic
-      and has no problem expressing his pansexuality
+      Lasan is a flim flam man. He uses his artificers skills to create cheap little gadgets that break within days of being sold. He is emotionally stunted and refuses personal attachments, especially since his father's death.
+      He's very good at selling his junk and good at getting while the getting is good
   #
   # Content that does not get displayed, but could be useful
   # to humans.  Includes review comments, notes about what to
