--- a/npcs/Class Abilities.yaml
+++ b/npcs/Class Abilities.yaml
@@ -231,12 +231,12 @@
                        within the same radius. Can use this ability x per long rest
        - Lay on Hands: Can touch another creature to heal up to xHP per long rest. Or can 5HP to cure a disease or poison affecting it.
        - Fighting Style: Protection - Can impose disadvantage on attacks again other creatures with 5 feet 
-       - Divine Smite: Melee weapon attacks deal an additional 5d8 radiant damage, or 6d8 versus undead or fiends 
+       - Divine Smite: Melee weapon attacks deal an additional xd8 radiant damage, or xd8 versus undead or fiends 
        - Divine Health: Immune to disease
        - Extra Attack: Can take and extra attack action each turn
-       - Aura of Protection: When he or friendly creatures within 30 feet must make a saving throw, they get a +5 bonus to their roll
-       - Aura of Courage: He and friendly creatures within 30 feet can't be frightened while he is conscious
-       - Cleansing Touch: x per long rest can use an action to touch a creature to end one spell on himself or a willing creature he touches       
+       - Aura of Protection: When he or friendly creatures within x feet must make a saving throw, they get a +5 bonus to their roll
+       - Aura of Courage: He and friendly creatures within x feet can't be frightened while he is conscious
+       - Cleansing Touch: x times per long rest can use an action to touch a creature to end one spell on himself or a willing creature he touches       
        - Spellcasting: Spell DC
          1st Level: 
          2nd Level: 
