--- a/npcs/ahktoma.yaml
+++ b/npcs/ahktoma.yaml
@@ -290,7 +290,9 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions:  The God's have not always been like this, "There was once a world beyond the Hekma"
+    expressions:  
+    -"The God's have not always been like this."
+    -"There was once a world beyond the Hekma"
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
