--- a/npcs/beach.yaml
+++ b/npcs/beach.yaml
@@ -423,11 +423,16 @@ npc:
     # No length limit for now.
     #
     background-story:
-     - Spartan in nature (but without the honorable intent) Orcish culture is well-known for its celebration of brute strength and denunciation of the more feminine side of an individual's nature. From birth, Beach, born 'Ukhtor', was smaller than his cohort and more inclined towards cleanliness and grace. As a baby he would cry and whine if exposed to violence or filth of any kind.</p><p>Bullied and beaten often for what were perceived as less 'Orcish' features, even as an infant, Ukhtor's mother feared for her son growing up in such a horrible environment. What's more, she was embarrassed to have produced such a creature. During one of the war-party's treks between camps, she abandoned Ukhtor in a basket by a well-traveled road just outside of the party's planned travel path.
-     - Local constables were escorting magistrates between nearby towns and cam across the basket. Peering inside, the head of the constabulary, Amin Carr, exclaimed, "cursed Orcs! They cannot even care for their own!"
-     - "Do away with the filthy runt!" One of the constables sneered.
-     - Amin peered into Ukhtor's deep blues eyes and saw a nimble, dedicated soul; much different from the ferocious hatred he'd seen in his battles against raid-parties. "No," Amin exclaimed, "this one is different. And we needn't fall victim to the same virulent hatred that afflicts the Orcs."
-     - Amin brought Ukhtor with him for the journey. Staring into his sea-blue eyes he pronounced that the youngster be named 'Beach'. Raised within the Constabulary's ranks, Beach learned skills more akin to his natural abilities and became an agile killer. He was also imbued with their sense of noblility and respect.
+     - id: bgpara_1
+       text: Spartan in nature (but without the honorable intent) Orcish culture is well-known for its celebration of brute strength and denunciation of the more feminine side of an individual's nature. From birth, Beach, born 'Ukhtor', was smaller than his cohort and more inclined towards cleanliness and grace. As a baby he would cry and whine if exposed to violence or filth of any kind.</p><p>Bullied and beaten often for what were perceived as less 'Orcish' features, even as an infant, Ukhtor's mother feared for her son growing up in such a horrible environment. What's more, she was embarrassed to have produced such a creature. During one of the war-party's treks between camps, she abandoned Ukhtor in a basket by a well-traveled road just outside of the party's planned travel path.
+     - id: bgpara_2
+       text: Local constables were escorting magistrates between nearby towns and cam across the basket. Peering inside, the head of the constabulary, Amin Carr, exclaimed, "cursed Orcs! They cannot even care for their own!"
+     - id: bgpara_3
+       text: "Do away with the filthy runt!" One of the constables sneered.
+     - id: bgpara_3
+       text: Amin peered into Ukhtor's deep blues eyes and saw a nimble, dedicated soul; much different from the ferocious hatred he'd seen in his battles against raid-parties. "No," Amin exclaimed, "this one is different. And we needn't fall victim to the same virulent hatred that afflicts the Orcs."
+     - id: bgpara_4
+       text: Amin brought Ukhtor with him for the journey. Staring into his sea-blue eyes he pronounced that the youngster be named 'Beach'. Raised within the Constabulary's ranks, Beach learned skills more akin to his natural abilities and became an agile killer. He was also imbued with their sense of noblility and respect.
 
     #
     # Personality (or something like that):
