--- a/npcs/beach.yaml
+++ b/npcs/beach.yaml
@@ -398,9 +398,9 @@ npc:
     - title: Cunning Action
     attacks:
     - title: Assassin's Dagger (+1)
-      description: When Beach Hits a creature that is surprised with this dagger, target must make a DC 18 CON throw or take 4d6 necrotic damage.      |
+      description: When Beach Hits a creature that is surprised with this dagger, target must make a DC 18 CON throw or take {i}4d6 necrotic damage{/i}.      |
     - title: Hidden Blade
-    - description: <i>(1d4 piercing, finesse)<i>
+      description: <i>(1d4 piercing, finesse)<i>
     combat-tactics: |
      If combat erupts, Beach appears to flee but instead is actually finding the best shadows from which to strike.
     special-equipment:
