--- a/npcs/beach.yaml
+++ b/npcs/beach.yaml
@@ -398,14 +398,14 @@ npc:
     - title: Cunning Action
     attacks:
     - title: Assassin's Dagger (+1)
-      description: When Beach Hits a creature that is surprised with this dagger, target must make a DC 18 CON throw or take {i}4d6 necrotic damage{/i}.      |
+      description: When Beach Hits a creature that is surprised with this dagger, target must make a DC 18 CON throw or take <i>4d6 necrotic damage</i>.      |
     - title: Hidden Blade
-      description: <i>(1d4 piercing, finesse)<i>
+      description: <i>(1d4 piercing, finesse)</i>
     combat-tactics: |
      If combat erupts, Beach appears to flee but instead is actually finding the best shadows from which to strike.
     special-equipment:
      - title: Burleigh and Stronginthearm Number IX
-       description: A +3 precise crossbow; only 2 were ever made.
+       description: A +3 precise crossbow; only 2 were ever made. On a successful hit, each bolt causes <i>1d8 piercing damage</i>.
 
   profile:
 
